# arkin

./: .dockerignore  .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  Dockerfile  README.md  arkin.code-workspace  binance_coinm.json  binance_usdm.json  docker-compose.workstation.yml  docker-compose.yml  mv.sql  okx_swap.json
arkin/: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Cargo.toml.bak  README.md  exchange-info.json  instruments.sql  venues.sql
arkin-accounting/: Cargo.toml
arkin-accounting/src/: errors.rs  ledger.rs  lib.rs  service.rs  service.rs.old  traits.rs
arkin-accounting/tests/: single_strategy.rs
arkin-allocation/: Cargo.toml
arkin-allocation/src/: config.rs  errors.rs  factory.rs  lib.rs  manager.rs  service.rs  simple.rs  traits.rs
arkin-allocation/tests/: config.rs.bak  limited.rs
arkin-audit/: Cargo.toml
arkin-audit/src/: lib.rs
arkin-binance/: Cargo.toml
arkin-binance/src/: lib.rs  service_execution.rs  service_execution_sim.rs  service_historical.rs  service_ingestor.rs  service_ingestor_sim.rs
arkin-binance/test_data/: ORDER_TRADE_UPDATE_1.json  ORDER_TRADE_UPDATE_4.json  ORDER_TRADE_UPDATE_5.json  TRADE_LITE_0.json
arkin-binance/tests/: integration_historical.rs
arkin-cli/: Cargo.toml
arkin-cli/src/: commands.rs  lib.rs  utils.rs
arkin-core/: Cargo.toml  build.rs
arkin-core/src/: barrier.rs  cli.rs  clock.rs  config.rs  constants.rs  engine.rs  errors.rs  events.rs  lib.rs  logging.rs  pubsub.rs  pubsub.rs.old  pubsub.rs.old.2  service.rs  snapshots.rs  system_time.rs  test_utils.rs  traits.rs  types.rs
arkin-cron/: Cargo.toml
arkin-cron/src/: lib.rs
arkin-engine/: Cargo.toml
arkin-engine/src/: engine.rs  errors.rs  lib.rs  traits.rs
arkin-exec-binance/: Cargo.toml
arkin-exec-binance/old/: binance.rs  service_execution.rs  service_execution_sim.rs  service_ingestor_sim.rs
arkin-exec-binance/src/: client.rs  config.rs  lib.rs  margin.rs  service.rs  spot.rs  types.rs  usdm.rs  utils.rs
arkin-exec-binance/test_data/: ACCOUNT_UPDATE_0.json  ACCOUNT_UPDATE_2.json  ORDER_TRADE_UPDATE_0.json  ORDER_TRADE_UPDATE_2.json  ORDER_TRADE_UPDATE_3.json  TRADE_LITE_1.json
arkin-exec-binance/tests/: integration_test.rs
arkin-exec-strat-default/: Cargo.toml
arkin-exec-strat-default/src/: lib.rs  service.rs
arkin-exec-strat-taker/: Cargo.toml
arkin-exec-strat-taker/src/: lib.rs  service.rs
arkin-execution/: Cargo.toml
arkin-execution/src/: config.rs  errors.rs  factory.rs  lib.rs  manager.rs  protocol.rs  simulation.rs  traits.rs
arkin-execution/tests/: executor_backtest.rs  order_manager_simple.rs
arkin-executor-simulation/: Cargo.toml
arkin-executor-simulation/src/: book.rs  lib.rs
arkin-executors/: Cargo.toml
arkin-executors/src/: errors.rs  factory.rs  lib.rs  traits.rs
arkin-ingestor/: Cargo.toml
arkin-ingestor/examples/: parser_usage.rs
arkin-ingestor/message_samples/: binance_spot_aggregate_trades.json  binance_spot_ticker_realtime.json  bybit_perpetual_mark_price.json  coinbase_spot_ticker_realtime.json  coinbase_spot_trades.json  okx_perpetual_trades.json  okx_spot_trades.json
arkin-ingestor/src/: config.rs  events.rs  lib.rs  market_config.rs  parser_design.rs  registry.rs  service.rs  subscriptions.rs  ws.rs  ws_examples.rs
arkin-ingestor/tests/: chaos_websocket_test.rs  websocket_integration_test.rs
arkin-ingestors/: Cargo.toml
arkin-ingestors/src/: args.rs  config.rs  errors.rs  factory.rs  lib.rs  service.rs  traits.rs  ws.rs
arkin-insights/: Cargo.toml
arkin-insights/benches/: storage_bench.rs
arkin-insights/src/: config.rs  errors.rs  factory.rs  feature_factory.rs  features.rs  fft.rs  hdbscan.rs  instrument_scope.rs  lib.rs  math.rs  pipeline.rs  service.rs  smoothing.rs  state.rs  synthetics.rs  traits.rs
arkin-insights/tests/: config.rs  config.rs.old  fill_strategy.rs
arkin-ordermanager/: Cargo.toml
arkin-ordermanager/src/: config.rs  factory.rs  lib.rs  order_book.rs  service.rs  traits.rs
arkin-ordermanager/tests/: executor_backtest.rs  order_manager_simple.rs
arkin-persistence/: Cargo.toml
arkin-persistence/src/: config.rs  context.rs  errors.rs  factory.rs  lib.rs  service.rs  test_utils.rs  traits.rs
arkin-persistence/tests/: config.rs.bak  db.rs.bak  test_reader.rs
arkin-portfolio/: Cargo.toml
arkin-portfolio/src/: config.rs  errors.rs  factory.rs  ledger.rs  lib.rs  manager.rs  traits.rs
arkin-portfolio/tests/: config.rs  manager.rs.bak  single_strategy.rs
arkin-sim-ingestor/: Cargo.toml
arkin-sim-ingestor/src/: lib.rs
arkin-strat-agent/: Cargo.toml
arkin-strat-agent/src/: allocation.rs  config.rs  infer_grpc.rs  infer_http.rs  lib.rs  service.rs  traits.rs  utils.rs
arkin-strat-crossover/: Cargo.toml
arkin-strat-crossover/src/: lib.rs  service.rs
arkin-strat-crossover/tests/: config.rs.back  crossover.rs.back
arkin-strategies/: Cargo.toml
arkin-strategies/src/: config.rs  crossover.rs  errors.rs  factory.rs  lib.rs  manager.rs  traits.rs
arkin-ws/: Cargo.toml
arkin-ws/src/: okex.rs
arkin/arkin/: Cargo.toml
arkin/arkin-allocation/: Cargo.toml
arkin/arkin-backoffice/: Cargo.toml
arkin/arkin-common/: Cargo.toml
arkin/arkin-core/: Cargo.toml
arkin/arkin-engine/: Cargo.toml
arkin/arkin-execution/: Cargo.toml
arkin/arkin-features/: Cargo.toml
arkin/arkin-ingestors/: Cargo.toml
arkin/arkin-insights/: Cargo.toml
arkin/arkin-market/: Cargo.toml
arkin/arkin-persistance/: Cargo.toml
arkin/arkin-portfolio/: Cargo.toml
arkin/arkin-state/: Cargo.toml
arkin/arkin-strategies/: Cargo.toml
arkin/configs/: default.yaml  dev.yaml  test.yaml
arkin/migrations/: 20240731052620_init.down.sql  20240731052620_init.sql  20240731052620_init.up.sql  20240731093201_events.down.sql  20240731093201_events.up.sql  neo.sql
arkin/src/: constants.rs  errors.rs  lib.rs  logging.rs  pipeline.rs  portfolio.rs  pubsub.rs  server.rs  state.rs  test_utils.rs
arkin/test-integration/: Cargo.toml
integration-tests/: Cargo.toml
research/: pyproject.toml
test-integration/: Cargo.toml
(+1279 files in other folders)
