[workspace]
# members = [ "arkin-persistence", "arkin-data-providers", "arkin-strategies", "arkin-engine", "arkin-exec-binance", "arkin-executors", "tests" ]

members = [ "arkin", "arkin-accounting", "arkin-audit", "arkin-exec-binance", "arkin-cli", "arkin-core", "arkin-cron", "arkin-exec-strat-default", "arkin-exec-strat-wide", "arkin-data-provider", "arkin-insights", "arkin-persistence", "arkin-sim-ingestor", "arkin-strat-agent", "arkin-strat-crossover", "integration-tests" ]

default-members = [ "arkin" ]

resolver = "2"

exclude = [ "*.md", "*.txt", ".git*", ".github/", "LICENSE*" ]

[workspace.package]
authors = [ "Dorus Janssens <dorus.janssens@gmail.com>" ]
version = "0.1.0"
edition = "2024"

# Metadata for a closed-source project
license = "Proprietary"


[workspace.dependencies]
# Utiliy
rand = "0.9"
uuid = { version = "1", features = [ "v4", "fast-rng", "serde" ], default-features = false }
strum = { version = "0.27", features = [ "derive" ], default-features = false }
url = { version = "2.5", default-features = false }
typed-builder = "0.23"
statrs = { version = "0.18", default-features = false }
clap = { version = "4.5", features = [ "derive" ] }

# Multi-threading
parking_lot = { version = "0.12", features = [  ], default-features = false }
rayon = "1.11"

# Async
tokio = { version = "1.48", features = [ "full", "tracing" ] }
kanal = { version = "0.1.1", features = [ "std-mutex" ] }
async-trait = "0.1"
async-stream = "0.3"
futures = { version = "0.3" }
tokio-util = { version = "0.7", features = [ "rt", "time" ] }

# HTTP & Websockets
tokio-rustls = { version = "0.26", features = [ "ring" ], default-features = false }
tokio-tungstenite = { version = "0.28", features = [ "rustls-tls-webpki-roots" ] }
reqwest = { version = "0.12", features = [ "json", "rustls-tls-webpki-roots", "http2", "gzip", "socks", "hickory-dns", "multipart" ], default-features = false }

# Data Types
rust_decimal = { version = "1.39", features = [ "maths", "serde", "std", "macros" ], default-features = false }
bytes = "1.11"

# Data Structures
dashmap = { version = "6.1", features = [ "inline", "rayon" ], default-features = false }

# Serialization
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
serde_with = { version = "3" }

# Database
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "time", "rust_decimal", "uuid", "derive", "macros" ], default-features = false }
clickhouse = { version = "0.14", features = [ "lz4", "uuid", "time" ] }

# Time
time = { version = "0.3", features = [ "macros", "serde-human-readable" ] }

# Logging & Tracing
tracing = { version = "0.1", features = [  ] }
tracing-futures = { version = "0.2", features = [ "tokio" ] }
tracing-subscriber = { version = "0.3", features = [ "local-time", "parking_lot", "env-filter" ] }
console-subscriber = { version = "0.5.0", features = [ "parking_lot" ] }

# Error handling
anyhow = { version = "1.0", features = [ "std" ], default-features = false }
thiserror = { version = "2.0", features = [  ], default-features = false }

# Config
config = { version = "0.15", features = [ "yaml" ] }

# Retry
backoff = { version = "0.4", features = [ "tokio" ] }

# Graph Library
petgraph = { version = "0.8", features = [ "graphmap" ], default-features = false }

# Caching
moka2 = { version = "0.13.0", features = [ "future" ] }

# TA
#yata = "0.7"

# GRPC
tonic = { version = "0.14", features = [ "gzip" ] }
prost = "0.14"
tonic-prost = "0.14"

# Ort
# ort = { version = "=2.0.0-rc.10" }
# ndarray = { version = "0.16.1" }
# Models & Optimisation
# catboost-rs = "0.1"
# clarabel = "0"
# Testing
# mockall = "0.13"
# test-case = "3.3"
test-log = { version = "0.2", features = [ "color", "trace" ], default-features = false }

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"

[profile.maxperf]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
panic = "abort"
