[package]
name = "arkin-allocation"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }
arkin-portfolio = { path = "../arkin-portfolio" }
arkin-persistence = { path = "../arkin-persistence" }

tokio = { workspace = true }
tokio-util = { workspace = true }
typed-builder = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }

mockall = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
test-log = { workspace = true }
