[package]
name = "arkin-binance"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
kanal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
url = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
typed-builder = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }

regex = "1.11"
hmac = "0.12"
sha2 = { version = "0.10", default-features = false, features = [ "oid" ] }
signature = "2.2"
base64 = "0.22"
ed25519-dalek = { version = "2.2", features = [ "pkcs8" ] }
http = "1"
flate2 = "1.1"
hex = "0.4"
openssl = "0.10"
once_cell = "1.21"
zip = "5.1.1"
csv = "1.3.1"

[dev-dependencies]
test-log = { workspace = true }
