[package]
name = "arkin-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
url = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
