[package]
name = "arkin-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
