[package]
name = "arkin-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
rust_decimal = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }
kanal = { workspace = true }
dashmap = { workspace = true }
moka2 = { workspace = true }
clap = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
walkdir = "2.5.0"
tonic-prost-build = { version = "0.14" }

[dev-dependencies]
test-log = { workspace = true }
