[package]
name = "arkin-engine"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }
arkin-ingestors = { path = "../arkin-ingestors" }
arkin-persistence = { path = "../arkin-persistence" }
arkin-portfolio = { path = "../arkin-portfolio" }
arkin-insights = { path = "../arkin-insights" }
arkin-strategies = { path = "../arkin-strategies" }
arkin-allocation = { path = "../arkin-allocation" }
arkin-ordermanager = { path = "../arkin-ordermanager" }
arkin-executors = { path = "../arkin-executors" }
arkin-binance = { path = "../arkin-binance" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
url = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
