[package]
name = "arkin-exec-binance"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
rust_decimal = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }

hmac = "0.12"
sha2 = { version = "0.10", default-features = false, features = [ "oid" ] }
signature = "2.2"
base64 = "0.22"
ed25519-dalek = { version = "2.2", features = [ "pkcs8" ] }
http = "1"
flate2 = "1.1"
hex = "0.4"


[dev-dependencies]
test-log = { workspace = true }
