[package]
name = "arkin-exec-binance"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
kanal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
url = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
typed-builder = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }

hmac = "0.12"
sha2 = { version = "0.10", default-features = false, features = [ "oid" ] }
hex = "0.4"
serde_urlencoded = "0.7"

[dev-dependencies]
test-log = { workspace = true }
wiremock = "0.6"
