[package]
name = "arkin-execution"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

rayon = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }