[package]
name = "arkin-execution"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-util = { workspace = true }
rayon = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
flume = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
derive_builder = { workspace = true }
