[package]
name = "arkin-execution"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }
arkin-portfolio = { path = "../arkin-portfolio" }

tokio = { workspace = true }
tokio-util = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
flume = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
derive_builder = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }

mockall = { workspace = true }
test-case = { workspace = true }
test-log = { workspace = true }
