[package]
name = "arkin-executors"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }
arkin-persistence = { path = "../arkin-persistence" }
arkin-binance = { path = "../arkin-binance" }

tokio = { workspace = true }
tokio-util = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
async-tungstenite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
