[package]
name = "arkin-ingestor"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
kanal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true }
clickhouse = { workspace = true }
uuid = { workspace = true }
statrs = { workspace = true }
clap = { workspace = true }
rust_decimal = { workspace = true }
tonic = { workspace = true }

tokio-tungstenite = { workspace = true }
url = { workspace = true }
