[package]
name = "arkin-ingestors"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }
arkin-persistence = { path = "../arkin-persistence" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
anyhow = { workspace = true }
async-tungstenite = { workspace = true }
flume = { workspace = true }
time = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
backoff = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
