[package]
name = "arkin-insights"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
kanal = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
uuid = { workspace = true }
yata = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
typed-builder = { workspace = true }
statrs = { workspace = true }
strum = { workspace = true }
# ort = { workspace = true }
# ndarray = { workspace = true }
rustfft = "6.4.0"
hdbscan = "0.10.0"
# catboost-rs = { workspace = true }
# clarabel = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
