[package]
name = "arkin-persistence"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-util = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
moka2 = { workspace = true }

mockall = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
test-log = { workspace = true }
