[package]
name = "arkin-persistence"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-util = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
strum = { workspace = true }
moka2 = { workspace = true }

# Parquet
parquet = { version = "53.3.0", features = [ "async", "arrow", "zstd", "object_store" ] }
arrow = { version = "53.3.0" }
object_store = "0.11"
# datafusion = "43.0.0"

mockall = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
test-log = { workspace = true }
