[package]
name = "arkin-persistence"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-util = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
moka2 = { workspace = true }
async-stream = { workspace = true }
anyhow = { workspace = true }
clickhouse = { workspace = true }
kanal = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
