[package]
name = "arkin-portfolio"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

serde = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
dashmap = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-utils = { path = "../test-utils" }
rstest = { workspace = true }