[package]
name = "arkin-portfolio"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio-util = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
dashmap = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
derive_builder = { workspace = true }

[dev-dependencies]
# test-utils = { path = "../test-utils" }
rstest = { workspace = true }
